--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@dev-plugins/react-query": "^0.4.0",
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^5.2.6",
+    "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
@@ -54,12 +55,14 @@
     "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.66.0",
     "react-native": "0.81.5",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-mmkv": "^4.0.0",
     "react-native-nitro-modules": "^0.31.5",
+    "react-native-phone-entry": "^0.2.4",
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
