--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "i18next": "^25.6.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
+    "react-i18next": "^16.2.4",
     "react-native": "0.81.5",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.28.0",
