--- a/package.json
+++ b/package.json
@@ -28,17 +28,20 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@better-auth/expo": "^1.3.34",
     "@blazejkustra/react-native-onboarding": "^1.0.0",
     "@clerk/clerk-expo": "^2.18.3",
     "@dev-plugins/react-query": "^0.4.0",
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^5.2.6",
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^7.0.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.7",
+    "better-auth": "^1.3.34",
     "expo": "~54.0.23",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -54,6 +57,7 @@
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
     "i18next": "^25.6.1",
+    "prisma": "^7.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
