--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-reanimated": "~4.1.3",
     "react-native-safe-area-context": "~5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-vision-camera": "^4.7.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
